InfrastructureBootcamp/Networking/nsg_armTemplate.json
{ 
            "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
            "contentVersion": "1.0.0.0",
            "parameters": {
              "deploymentResourceGroup": {
                "type": "string"
              },
              "location": {
                "type": "string",
                "defaultValue": "[resourceGroup().location]"         
              },
              "nsgNamePrefix": {
                "type": "string"
              },
              "jumpServerSubnet": {
                "type": "string"
              },
              "domainControllerSubnet": {
                "type": "string"
              },
              "AdfsIpAddress": {
                "type": "string"
              },
              "CrlIpAddress": {
                "type": "string"
              },              
              "edAddressPrefix": {
                "type": "string"
              },
              "apAddressPrefix": {
                "type": "string"
              },
              "dbAddressPrefix": {
                "type": "string"
              },
              "tag-system": {
                "type": "string",
                "defaultValue": "Infrastructure"
              },
              "tag-component": {
                "type": "string",
                "defaultValue": "Network Security Group"
              },
              "tag-billingProject": {
                "type": "string",
                "defaultValue": "AISU"
              }
             },
            "variables": {
                "networkSecurityGroups": [
                    {
                        "name": "[concat(parameters('nsgNamePrefix'), '-ED')]",
                        "securityRules": [
                            {
                                "direction":  "inbound",
                                "priority":  210,
                                "name":  "AllowJumpServersInBound",
                                "description":  "Allow Jump Servers InBound",
                                "access":  "allow",
                                "protocol":  "*",
                                "sourceAddressPrefix":  "[parameters('jumpServerSubnet')]",
                                "sourceAddressPrefixes":  "",
                                "destinationAddressPrefix":  "VirtualNetwork",
                                "destinationAddressPrefixes":  [],
                                "sourcePortRange":  "*",
                                "sourcePortRanges":  [],
                                "destinationPortRange":  "*",
                                "destinationPortRanges":  []
                            },
                            {
                                "direction":  "inbound",
                                "priority":  220,
                                "name":  "AllowInBoundHttps",
                                "description":  "Allow InBound HTTPS traffic",
                                "access":  "allow",
                                "protocol":  "tcp",
                                "sourceAddressPrefix":  "*",
                                "sourceAddressPrefixes":  [],
                                "destinationAddressPrefix":  "VirtualNetwork",
                                "destinationAddressPrefixes":  [],
                                "sourcePortRange":  "*",
                                "sourcePortRanges":  [],
                                "destinationPortRange":  "443",
                                "destinationPortRanges":  []
                            },
                            {
                                "direction":  "inbound",
                                "priority":  1980,
                                "name":  "DenyInBoundVnetUDP",
                                "description":  "Deny Inbound UDP Traffic from all Azure and on-premises subnets.",
                                "access":  "deny",
                                "sourceAddressPrefix":  "VirtualNetwork",
                                "sourceAddressPrefixes":  [],
                                "destinationAddressPrefix":  "VirtualNetwork",
                                "destinationAddressPrefixes":  [],
                                "protocol":  "udp",
                                "sourcePortRange":  "*",
                                "sourcePortRanges":  [],
                                "destinationPortRange":  "*",
                                "destinationPortRanges":  []
                            },
                            {
                                "direction":  "inbound",
                                "priority":  1990,
                                "name":  "DenyInBoundVnetTCP",
                                "description":  "Deny Inbound TCP Traffic from all Azure and on-premises subnets.",
                                "access":  "deny",
                                "sourceAddressPrefix":  "VirtualNetwork",
                                "sourceAddressPrefixes":  [],
                                "destinationAddressPrefix":  "VirtualNetwork",
                                "destinationAddressPrefixes":  [],
                                "protocol":  "tcp",
                                "sourcePortRange":  "*",
                                "sourcePortRanges":  [],
                                "destinationPortRange":  "*",
                                "destinationPortRanges":  []
                            },
                            {
                                "direction":  "outbound",
                                "priority":  210,
                                "name":  "AllowOutBoundActiveDirectoryTCP",
                                "description":  "Allow OutBound Active Directory TCP protocols to the Domain Controllers",
                                "access":  "allow",
                                "protocol":  "tcp",
                                "sourceAddressPrefix":  "VirtualNetwork",
                                "sourceAddressPrefixes":  [],
                                "destinationAddressPrefix":  "[parameters('domainControllerSubnet')]",
                                "destinationAddressPrefixes":  "",
                                "sourcePortRange":  "*",
                                "sourcePortRanges":  [],
                                "destinationPortRange":  "",
                                "destinationPortRanges":  [
                                                              "53",
                                                              "88",
                                                              "135",
                                                              "137-139",
                                                              "389",
                                                              "445",
                                                              "464",
                                                              "636",
                                                              "3268",
                                                              "3269",
                                                              "49152-65535"
                                                          ]
                            },
                            {
                                "direction":  "outbound",
                                "priority":  220,
                                "name":  "AllowOutBoundActiveDirectoryUDP",
                                "description":  "Allow OutBound Active Directory UDP protocols to the Domain Controllers",
                                "access":  "allow",
                                "protocol":  "udp",
                                "sourceAddressPrefix":  "VirtualNetwork",
                                "sourceAddressPrefixes":  [],
                                "destinationAddressPrefix":  "[parameters('domainControllerSubnet')]",
                                "destinationAddressPrefixes":  "",
                                "sourcePortRange":  "*",
                                "sourcePortRanges":  [],
                                "destinationPortRange":  "",
                                "destinationPortRanges":  [
                                                              "53",
                                                              "88",
                                                              "123",
                                                              "137-139",
                                                              "389",
                                                              "464",
                                                              "49152-65535"
                                                          ]
                            },
                            {
                                "direction":  "outbound",
                                "priority":  230,
                                "name":  "AllowOutBoundAdfsTCP",
                                "description":  "Allow OutBound HTTPS traffic to ADFS",
                                "access":  "allow",
                                "protocol":  "tcp",
                                "sourceAddressPrefix":  "VirtualNetwork",
                                "sourceAddressPrefixes":  [],
                                "destinationAddressPrefix":  "[parameters('AdfsIpAddress')]",
                                "destinationAddressPrefixes":  "",
                                "sourcePortRange":  "*",
                                "sourcePortRanges":  [],
                                "destinationPortRange":  "443",
                                "destinationPortRanges":  []
                            },
                            {
                                "direction":  "outbound",
                                "priority":  240,
                                "name":  "AllowOutBoundCrlTCP",
                                "description":  "Allow OutBound HTTP traffic to CRL",
                                "access":  "allow",
                                "protocol":  "tcp",
                                "sourceAddressPrefix":  "VirtualNetwork",
                                "sourceAddressPrefixes":  [],
                                "destinationAddressPrefix":  "[parameters('CrlIpAddress')]",
                                "destinationAddressPrefixes":  "",
                                "sourcePortRange":  "*",
                                "sourcePortRanges":  [],
                                "destinationPortRange":  "80",
                                "destinationPortRanges":  []
                            },
                            {
                                "direction":  "outbound",
                                "priority":  250,
                                "name":  "AllowOutBoundTcpTrafficToAppTier",
                                "description":  "Allow OutBound TCP traffic to APP tier",
                                "access":  "allow",
                                "protocol":  "tcp",
                                "sourceAddressPrefix":  "VirtualNetwork",
                                "sourceAddressPrefixes":  [],
                                "destinationAddressPrefix":  "[parameters('apAddressPrefix')]",
                                "destinationAddressPrefixes":  [],
                                "sourcePortRange":  "*",
                                "sourcePortRanges":  [],
                                "destinationPortRange":  "",
                                "destinationPortRanges":  [
                                                            "137-139",
                                                            "445"
                                                          ]
                            },
                            {
                                "direction":  "outbound",
                                "priority":  260,
                                "name":  "AllowOutBoundUdpTrafficToAppTier",
                                "description":  "Allow OutBound UDP traffic to APP tier",
                                "access":  "allow",
                                "protocol":  "udp",
                                "sourceAddressPrefix":  "VirtualNetwork",
                                "sourceAddressPrefixes":  [],
                                "destinationAddressPrefix":  "[parameters('apAddressPrefix')]",
                                "destinationAddressPrefixes": [],
                                "sourcePortRange":  "*",
                                "sourcePortRanges":  [],
                                "destinationPortRange":  "137-139",
                                "destinationPortRanges":  []
                            },
                            {
                                "direction":  "outbound",
                                "priority":  1910,
                                "name":  "DenyOutBoundUnsecureTcpInternetProtocols",
                                "description":  "Deny OutBound unsecure TCP Internet protocols",
                                "access":  "deny",
                                "protocol":  "tcp",
                                "sourceAddressPrefix":  "VirtualNetwork",
                                "sourceAddressPrefixes":  [],
                                "destinationAddressPrefix":  "Internet",
                                "destinationAddressPrefixes":  [],
                                "sourcePortRange":  "*",
                                "sourcePortRanges":  [],
                                "destinationPortRange":  "",
                                "destinationPortRanges":  [
                                                              "25",
                                                              "53",
                                                              "445"
                                                          ]
                            },
                            {
                                "direction":  "outbound",
                                "priority":  1920,
                                "name":  "DenyOutBoundUnsecureUdpInternetprotocols",
                                "description":  "Deny OutBound unsecure UDP Internet protocols",
                                "access":  "deny",
                                "protocol":  "udp",
                                "sourceAddressPrefix":  "VirtualNetwork",
                                "sourceAddressPrefixes":  [],
                                "destinationAddressPrefix":  "Internet",
                                "destinationAddressPrefixes":  [],
                                "sourcePortRange":  "*",
                                "sourcePortRanges":  [],
                                "destinationPortRange":  "",
                                "destinationPortRanges":  [
                                                              "53"
                                                          ]
                            },
                            {
                                "direction":  "outbound",
                                "priority":  1980,
                                "name":  "DenyOutBoundVnetTCP",
                                "description":  "Deny Outbound TCP Traffic to all Azure and on-premises subnets.",
                                "access":  "deny",
                                "sourceAddressPrefix":  "VirtualNetwork",
                                "sourceAddressPrefixes":  [],
                                "destinationAddressPrefix":  "VirtualNetwork",
                                "destinationAddressPrefixes":  [],
                                "protocol":  "tcp",
                                "sourcePortRange":  "*",
                                "sourcePortRanges":  [],
                                "destinationPortRange":  "*",
                                "destinationPortRanges":  []
                            },
                            {
                                "direction":  "outbound",
                                "priority":  1990,
                                "name":  "DenyOutBoundVnetUDP",
                                "description":  "Deny Outbound UDP Traffic to all Azure and on-premises subnets.",
                                "access":  "deny",
                                "sourceAddressPrefix":  "VirtualNetwork",
                                "sourceAddressPrefixes":  [],
                                "destinationAddressPrefix":  "VirtualNetwork",
                                "destinationAddressPrefixes":  [],
                                "protocol":  "udp",
                                "sourcePortRange":  "*",
                                "sourcePortRanges":  [],
                                "destinationPortRange":  "*",
                                "destinationPortRanges":  []
                            }
                        ]
                    },
                    {
                        "name": "[concat(parameters('nsgNamePrefix'), '-AP')]",
                        "securityRules": [
                            {
                                "direction":  "inbound",
                                "priority":  200,
                                "name":  "AllowInBoundIntraSubnetTraffic",
                                "description":  "Allow InBound Intra-Subnet Traffic InBound",
                                "access":  "allow",
                                "protocol":  "*",
                                "sourceAddressPrefix":  "[parameters('apAddressPrefix')]",
                                "sourceAddressPrefixes":  [],
                                "destinationAddressPrefix":  "VirtualNetwork",
                                "destinationAddressPrefixes":  [],
                                "sourcePortRange":  "*",
                                "sourcePortRanges":  [],
                                "destinationPortRange":  "*",
                                "destinationPortRanges":  []
                            },
                            {
                                "direction":  "inbound",
                                "priority":  210,
                                "name":  "AllowJumpServersInBound",
                                "description":  "Allow Jump Servers InBound",
                                "access":  "allow",
                                "protocol":  "*",
                                "sourceAddressPrefix":  "[parameters('jumpServerSubnet')]",
                                "sourceAddressPrefixes":  "",
                                "destinationAddressPrefix":  "VirtualNetwork",
                                "destinationAddressPrefixes":  [],
                                "sourcePortRange":  "*",
                                "sourcePortRanges":  [],
                                "destinationPortRange":  "*",
                                "destinationPortRanges":  []
                            },
                            {
                                "direction":  "inbound",
                                "priority":  220,
                                "name":  "AllowInBoundTcpTrafficFromEdgeTier",
                                "description":  "Allow InBound TCP traffic from EDGE tier",
                                "access":  "allow",
                                "protocol":  "tcp",
                                "sourceAddressPrefix":  "[parameters('edAddressPrefix')]",
                                "sourceAddressPrefixes":  [],
                                "destinationAddressPrefix": "VirtualNetwork",
                                "destinationAddressPrefixes":  [],
                                "sourcePortRange":  "*",
                                "sourcePortRanges":  [],
                                "destinationPortRange":  "",
                                "destinationPortRanges":  [
                                                            "137-139",
                                                            "445"
                                                          ]
                            },
                            {
                                "direction":  "inbound",
                                "priority":  230,
                                "name":  "AllowInBoundUdpTrafficFromEdgeTier",
                                "description":  "Allow InBound UDP traffic from EDGE tier",
                                "access":  "allow",
                                "protocol":  "udp",
                                "sourceAddressPrefix":  "[parameters('edAddressPrefix')]",
                                "sourceAddressPrefixes":  [],
                                "destinationAddressPrefix":  "VirtualNetwork",
                                "destinationAddressPrefixes": [],
                                "sourcePortRange":  "*",
                                "sourcePortRanges":  [],
                                "destinationPortRange":  "137-139",
                                "destinationPortRanges":  []
                            },
                            {
                                "direction":  "inbound",
                                "priority":  1980,
                                "name":  "DenyInBoundVnetUDP",
                                "description":  "Deny Inbound UDP Traffic from all Azure and on-premises subnets.",
                                "access":  "deny",
                                "sourceAddressPrefix":  "VirtualNetwork",
                                "sourceAddressPrefixes":  [],
                                "destinationAddressPrefix":  "VirtualNetwork",
                                "destinationAddressPrefixes":  [],
                                "protocol":  "udp",
                                "sourcePortRange":  "*",
                                "sourcePortRanges":  [],
                                "destinationPortRange":  "*",
                                "destinationPortRanges":  []
                            },
                            {
                                "direction":  "inbound",
                                "priority":  1990,
                                "name":  "DenyInBoundVnetTCP",
                                "description":  "Deny Inbound TCP Traffic from all Azure and on-premises subnets.",
                                "access":  "deny",
                                "sourceAddressPrefix":  "VirtualNetwork",
                                "sourceAddressPrefixes":  [],
                                "destinationAddressPrefix":  "VirtualNetwork",
                                "destinationAddressPrefixes":  [],
                                "protocol":  "tcp",
                                "sourcePortRange":  "*",
                                "sourcePortRanges":  [],
                                "destinationPortRange":  "*",
                                "destinationPortRanges":  []
                            },
                            {
                                "direction":  "outbound",
                                "priority":  200,
                                "name":  "AllowOutBoundIntraSubnetTraffic",
                                "description":  "Allow OutBound Intra-Subnet Traffic InBound",
                                "access":  "allow",
                                "protocol":  "*",
                                "sourceAddressPrefix":  "VirtualNetwork",
                                "sourceAddressPrefixes":  [],
                                "destinationAddressPrefix":  "[parameters('apAddressPrefix')]",
                                "destinationAddressPrefixes":  [],
                                "sourcePortRange":  "*",
                                "sourcePortRanges":  [],
                                "destinationPortRange":  "*",
                                "destinationPortRanges":  []
                            },
                            {
                                "direction":  "outbound",
                                "priority":  210,
                                "name":  "AllowOutBoundActiveDirectoryTCP",
                                "description":  "Allow OutBound Active Directory TCP protocols to the Domain Controllers",
                                "access":  "allow",
                                "protocol":  "tcp",
                                "sourceAddressPrefix":  "VirtualNetwork",
                                "sourceAddressPrefixes":  [],
                                "destinationAddressPrefix":  "[parameters('domainControllerSubnet')]",
                                "destinationAddressPrefixes":  "",
                                "sourcePortRange":  "*",
                                "sourcePortRanges":  [],
                                "destinationPortRange":  "",
                                "destinationPortRanges":  [
                                                              "53",
                                                              "88",
                                                              "135",
                                                              "137-139",
                                                              "389",
                                                              "445",
                                                              "464",
                                                              "636",
                                                              "3268",
                                                              "3269",
                                                              "49152-65535"
                                                          ]
                            },
                            {
                                "direction":  "outbound",
                                "priority":  220,
                                "name":  "AllowOutBoundActiveDirectoryUDP",
                                "description":  "Allow OutBound Active Directory UDP protocols to the Domain Controllers",
                                "access":  "allow",
                                "protocol":  "udp",
                                "sourceAddressPrefix":  "VirtualNetwork",
                                "sourceAddressPrefixes":  [],
                                "destinationAddressPrefix":  "[parameters('domainControllerSubnet')]",
                                "destinationAddressPrefixes":  "",
                                "sourcePortRange":  "*",
                                "sourcePortRanges":  [],
                                "destinationPortRange":  "",
                                "destinationPortRanges":  [
                                                              "53",
                                                              "88",
                                                              "123",
                                                              "137-139",
                                                              "389",
                                                              "464",
                                                              "49152-65535"
                                                          ]
                            },
                            {
                                "direction":  "outbound",
                                "priority":  230,
                                "name":  "AllowOutBoundAdfsTCP",
                                "description":  "Allow OutBound HTTPS traffic to ADFS",
                                "access":  "allow",
                                "protocol":  "tcp",
                                "sourceAddressPrefix":  "VirtualNetwork",
                                "sourceAddressPrefixes":  [],
                                "destinationAddressPrefix":  "[parameters('AdfsIpAddress')]",
                                "destinationAddressPrefixes":  "",
                                "sourcePortRange":  "*",
                                "sourcePortRanges":  [],
                                "destinationPortRange":  "443",
                                "destinationPortRanges":  []
                            },
                            {
                                "direction":  "outbound",
                                "priority":  240,
                                "name":  "AllowOutBoundCrlTCP",
                                "description":  "Allow OutBound HTTP traffic to CRL",
                                "access":  "allow",
                                "protocol":  "tcp",
                                "sourceAddressPrefix":  "VirtualNetwork",
                                "sourceAddressPrefixes":  [],
                                "destinationAddressPrefix":  "[parameters('CrlIpAddress')]",
                                "destinationAddressPrefixes":  "",
                                "sourcePortRange":  "*",
                                "sourcePortRanges":  [],
                                "destinationPortRange":  "80",
                                "destinationPortRanges":  []
                            },
                            {
                                "direction":  "outbound",
                                "priority":  250,
                                "name":  "AllowOutBoundTcpTrafficToDbTier",
                                "description":  "Allow OutBound TCP traffic to DB tier",
                                "access":  "allow",
                                "protocol":  "tcp",
                                "sourceAddressPrefix":  "VirtualNetwork",
                                "sourceAddressPrefixes":  [],
                                "destinationAddressPrefix":  "[parameters('dbAddressPrefix')]",
                                "destinationAddressPrefixes":  [],
                                "sourcePortRange":  "*",
                                "sourcePortRanges":  [],
                                "destinationPortRange":  "1433",
                                "destinationPortRanges":  []
                            },
                            {
                                "direction":  "outbound",
                                "priority":  260,
                                "name":  "AllowOutBoundUdpTrafficToDbTier",
                                "description":  "Allow OutBound UDP traffic to DB tier",
                                "access":  "allow",
                                "protocol":  "udp",
                                "sourceAddressPrefix":  "VirtualNetwork",
                                "sourceAddressPrefixes":  [],
                                "destinationAddressPrefix":  "[parameters('dbAddressPrefix')]",
                                "destinationAddressPrefixes": [],
                                "sourcePortRange":  "*",
                                "sourcePortRanges":  [],
                                "destinationPortRange":  "1434",
                                "destinationPortRanges":  []
                            },
                            {
                                "direction":  "outbound",
                                "priority":  1910,
                                "name":  "DenyOutBoundUnsecureTcpInternetProtocols",
                                "description":  "Deny OutBound unsecure TCP Internet protocols",
                                "access":  "deny",
                                "protocol":  "tcp",
                                "sourceAddressPrefix":  "VirtualNetwork",
                                "sourceAddressPrefixes":  [],
                                "destinationAddressPrefix":  "Internet",
                                "destinationAddressPrefixes":  [],
                                "sourcePortRange":  "*",
                                "sourcePortRanges":  [],
                                "destinationPortRange":  "",
                                "destinationPortRanges":  [
                                                              "25",
                                                              "53",
                                                              "445"
                                                          ]
                            },
                            {
                                "direction":  "outbound",
                                "priority":  1920,
                                "name":  "DenyOutBoundUnsecureUdpInternetprotocols",
                                "description":  "Deny OutBound unsecure UDP Internet protocols",
                                "access":  "deny",
                                "protocol":  "udp",
                                "sourceAddressPrefix":  "VirtualNetwork",
                                "sourceAddressPrefixes":  [],
                                "destinationAddressPrefix":  "Internet",
                                "destinationAddressPrefixes":  [],
                                "sourcePortRange":  "*",
                                "sourcePortRanges":  [],
                                "destinationPortRange":  "",
                                "destinationPortRanges":  [
                                                              "53"
                                                          ]
                            },
                            {
                                "direction":  "outbound",
                                "priority":  1980,
                                "name":  "DenyOutBoundVnetTCP",
                                "description":  "Deny Outbound TCP Traffic to all Azure and on-premises subnets.",
                                "access":  "deny",
                                "sourceAddressPrefix":  "VirtualNetwork",
                                "sourceAddressPrefixes":  [],
                                "destinationAddressPrefix":  "VirtualNetwork",
                                "destinationAddressPrefixes":  [],
                                "protocol":  "tcp",
                                "sourcePortRange":  "*",
                                "sourcePortRanges":  [],
                                "destinationPortRange":  "*",
                                "destinationPortRanges":  []
                            },
                            {
                                "direction":  "outbound",
                                "priority":  1990,
                                "name":  "DenyOutBoundVnetUDP",
                                "description":  "Deny Outbound UDP Traffic to all Azure and on-premises subnets.",
                                "access":  "deny",
                                "sourceAddressPrefix":  "VirtualNetwork",
                                "sourceAddressPrefixes":  [],
                                "destinationAddressPrefix":  "VirtualNetwork",
                                "destinationAddressPrefixes":  [],
                                "protocol":  "udp",
                                "sourcePortRange":  "*",
                                "sourcePortRanges":  [],
                                "destinationPortRange":  "*",
                                "destinationPortRanges":  []
                            }
                        ]
                    },
                    {
                        "name": "[concat(parameters('nsgNamePrefix'), '-DB')]",
                        "securityRules": [
                            {
                                "direction":  "inbound",
                                "priority":  200,
                                "name":  "AllowInBoundIntraSubnetTraffic",
                                "description":  "Allow InBound Intra-Subnet Traffic InBound",
                                "access":  "allow",
                                "protocol":  "*",
                                "sourceAddressPrefix":  "[parameters('dbAddressPrefix')]",
                                "sourceAddressPrefixes":  [],
                                "destinationAddressPrefix":  "VirtualNetwork",
                                "destinationAddressPrefixes":  [],
                                "sourcePortRange":  "*",
                                "sourcePortRanges":  [],
                                "destinationPortRange":  "*",
                                "destinationPortRanges":  []
                            },
                            {
                                "direction":  "inbound",
                                "priority":  210,
                                "name":  "AllowJumpServersInBound",
                                "description":  "Allow Jump Servers InBound",
                                "access":  "allow",
                                "protocol":  "*",
                                "sourceAddressPrefix":  "[parameters('jumpServerSubnet')]",
                                "sourceAddressPrefixes":  "",
                                "destinationAddressPrefix":  "VirtualNetwork",
                                "destinationAddressPrefixes":  [],
                                "sourcePortRange":  "*",
                                "sourcePortRanges":  [],
                                "destinationPortRange":  "*",
                                "destinationPortRanges":  []
                            },
                            {
                                "direction":  "inbound",
                                "priority":  220,
                                "name":  "AllowInBoundTcpTrafficFromAppTier",
                                "description":  "Allow InBound TCP traffic from APP tier",
                                "access":  "allow",
                                "protocol":  "tcp",
                                "sourceAddressPrefix":  "[parameters('apAddressPrefix')]",
                                "sourceAddressPrefixes":  [],
                                "destinationAddressPrefix": "VirtualNetwork",
                                "destinationAddressPrefixes":  [],
                                "sourcePortRange":  "*",
                                "sourcePortRanges":  [],
                                "destinationPortRange":  "1433",
                                "destinationPortRanges":  []
                            },
                            {
                                "direction":  "inbound",
                                "priority":  230,
                                "name":  "AllowInBoundUdpTrafficFromAppTier",
                                "description":  "Allow InBound UDP traffic from App tier",
                                "access":  "allow",
                                "protocol":  "udp",
                                "sourceAddressPrefix":  "[parameters('apAddressPrefix')]",
                                "sourceAddressPrefixes":  [],
                                "destinationAddressPrefix":  "VirtualNetwork",
                                "destinationAddressPrefixes": [],
                                "sourcePortRange":  "*",
                                "sourcePortRanges":  [],
                                "destinationPortRange":  "1434",
                                "destinationPortRanges":  []
                            },
                            {
                                "direction":  "inbound",
                                "priority":  1980,
                                "name":  "DenyInBoundVnetUDP",
                                "description":  "Deny Inbound UDP Traffic from all Azure and on-premises subnets.",
                                "access":  "deny",
                                "sourceAddressPrefix":  "VirtualNetwork",
                                "sourceAddressPrefixes":  [],
                                "destinationAddressPrefix":  "VirtualNetwork",
                                "destinationAddressPrefixes":  [],
                                "protocol":  "udp",
                                "sourcePortRange":  "*",
                                "sourcePortRanges":  [],
                                "destinationPortRange":  "*",
                                "destinationPortRanges":  []
                            },
                            {
                                "direction":  "inbound",
                                "priority":  1990,
                                "name":  "DenyInBoundVnetTCP",
                                "description":  "Deny Inbound TCP Traffic from all Azure and on-premises subnets.",
                                "access":  "deny",
                                "sourceAddressPrefix":  "VirtualNetwork",
                                "sourceAddressPrefixes":  [],
                                "destinationAddressPrefix":  "VirtualNetwork",
                                "destinationAddressPrefixes":  [],
                                "protocol":  "tcp",
                                "sourcePortRange":  "*",
                                "sourcePortRanges":  [],
                                "destinationPortRange":  "*",
                                "destinationPortRanges":  []
                            },
                            {
                                "direction":  "outbound",
                                "priority":  200,
                                "name":  "AllowOutBoundIntraSubnetTraffic",
                                "description":  "Allow OutBound Intra-Subnet Traffic InBound",
                                "access":  "allow",
                                "protocol":  "*",
                                "sourceAddressPrefix":  "VirtualNetwork",
                                "sourceAddressPrefixes":  [],
                                "destinationAddressPrefix":  "[parameters('dbAddressPrefix')]",
                                "destinationAddressPrefixes":  [],
                                "sourcePortRange":  "*",
                                "sourcePortRanges":  [],
                                "destinationPortRange":  "*",
                                "destinationPortRanges":  []
                            },
                            {
                                "direction":  "outbound",
                                "priority":  210,
                                "name":  "AllowOutBoundActiveDirectoryTCP",
                                "description":  "Allow OutBound Active Directory TCP protocols to the Domain Controllers",
                                "access":  "allow",
                                "protocol":  "tcp",
                                "sourceAddressPrefix":  "VirtualNetwork",
                                "sourceAddressPrefixes":  [],
                                "destinationAddressPrefix":  "[parameters('domainControllerSubnet')]",
                                "destinationAddressPrefixes":  "",
                                "sourcePortRange":  "*",
                                "sourcePortRanges":  [],
                                "destinationPortRange":  "",
                                "destinationPortRanges":  [
                                                              "53",
                                                              "88",
                                                              "135",
                                                              "137-139",
                                                              "389",
                                                              "445",
                                                              "464",
                                                              "636",
                                                              "3268",
                                                              "3269",
                                                              "49152-65535"
                                                          ]
                            },
                            {
                                "direction":  "outbound",
                                "priority":  220,
                                "name":  "AllowOutBoundActiveDirectoryUDP",
                                "description":  "Allow OutBound Active Directory UDP protocols to the Domain Controllers",
                                "access":  "allow",
                                "protocol":  "udp",
                                "sourceAddressPrefix":  "VirtualNetwork",
                                "sourceAddressPrefixes":  [],
                                "destinationAddressPrefix":  "[parameters('domainControllerSubnet')]",
                                "destinationAddressPrefixes":  "",
                                "sourcePortRange":  "*",
                                "sourcePortRanges":  [],
                                "destinationPortRange":  "",
                                "destinationPortRanges":  [
                                                              "53",
                                                              "88",
                                                              "123",
                                                              "137-139",
                                                              "389",
                                                              "464",
                                                              "49152-65535"
                                                          ]
                            },
                            {
                                "direction":  "outbound",
                                "priority":  230,
                                "name":  "AllowOutBoundAdfsTCP",
                                "description":  "Allow OutBound HTTPS traffic to ADFS",
                                "access":  "allow",
                                "protocol":  "tcp",
                                "sourceAddressPrefix":  "VirtualNetwork",
                                "sourceAddressPrefixes":  [],
                                "destinationAddressPrefix":  "[parameters('AdfsIpAddress')]",
                                "destinationAddressPrefixes":  "",
                                "sourcePortRange":  "*",
                                "sourcePortRanges":  [],
                                "destinationPortRange":  "443",
                                "destinationPortRanges":  []
                            },
                            {
                                "direction":  "outbound",
                                "priority":  240,
                                "name":  "AllowOutBoundCrlTCP",
                                "description":  "Allow OutBound HTTP traffic to CRL",
                                "access":  "allow",
                                "protocol":  "tcp",
                                "sourceAddressPrefix":  "VirtualNetwork",
                                "sourceAddressPrefixes":  [],
                                "destinationAddressPrefix":  "[parameters('CrlIpAddress')]",
                                "destinationAddressPrefixes":  "",
                                "sourcePortRange":  "*",
                                "sourcePortRanges":  [],
                                "destinationPortRange":  "80",
                                "destinationPortRanges":  []
                            },
                            {
                                "direction":  "outbound",
                                "priority":  1910,
                                "name":  "DenyOutBoundUnsecureTcpInternetProtocols",
                                "description":  "Deny OutBound unsecure TCP Internet protocols",
                                "access":  "deny",
                                "protocol":  "tcp",
                                "sourceAddressPrefix":  "VirtualNetwork",
                                "sourceAddressPrefixes":  [],
                                "destinationAddressPrefix":  "Internet",
                                "destinationAddressPrefixes":  [],
                                "sourcePortRange":  "*",
                                "sourcePortRanges":  [],
                                "destinationPortRange":  "",
                                "destinationPortRanges":  [
                                                              "25",
                                                              "53",
                                                              "445"
                                                          ]
                            },
                            {
                                "direction":  "outbound",
                                "priority":  1920,
                                "name":  "DenyOutBoundUnsecureUdpInternetprotocols",
                                "description":  "Deny OutBound unsecure UDP Internet protocols",
                                "access":  "deny",
                                "protocol":  "udp",
                                "sourceAddressPrefix":  "VirtualNetwork",
                                "sourceAddressPrefixes":  [],
                                "destinationAddressPrefix":  "Internet",
                                "destinationAddressPrefixes":  [],
                                "sourcePortRange":  "*",
                                "sourcePortRanges":  [],
                                "destinationPortRange":  "",
                                "destinationPortRanges":  [
                                                              "53"
                                                          ]
                            },
                            {
                                "direction":  "outbound",
                                "priority":  1980,
                                "name":  "DenyOutBoundVnetTCP",
                                "description":  "Deny Outbound TCP Traffic to all Azure and on-premises subnets.",
                                "access":  "deny",
                                "sourceAddressPrefix":  "VirtualNetwork",
                                "sourceAddressPrefixes":  [],
                                "destinationAddressPrefix":  "VirtualNetwork",
                                "destinationAddressPrefixes":  [],
                                "protocol":  "tcp",
                                "sourcePortRange":  "*",
                                "sourcePortRanges":  [],
                                "destinationPortRange":  "*",
                                "destinationPortRanges":  []
                            },
                            {
                                "direction":  "outbound",
                                "priority":  1990,
                                "name":  "DenyOutBoundVnetUDP",
                                "description":  "Deny Outbound UDP Traffic to all Azure and on-premises subnets.",
                                "access":  "deny",
                                "sourceAddressPrefix":  "VirtualNetwork",
                                "sourceAddressPrefixes":  [],
                                "destinationAddressPrefix":  "VirtualNetwork",
                                "destinationAddressPrefixes":  [],
                                "protocol":  "udp",
                                "sourcePortRange":  "*",
                                "sourcePortRanges":  [],
                                "destinationPortRange":  "*",
                                "destinationPortRanges":  []
                            }
                        ]
                    }
                ],
                "tags": {
                    "system": "[parameters('tag-system')]",
                    "component": "[parameters('tag-component')]",
                    "billingProject": "[parameters('tag-billingProject')]"
                }
            },
            "resources": [
                {
                  "apiVersion": "2019-06-01",
                  "type": "Microsoft.Network/networkSecurityGroups",
                  "name": "[variables('networkSecurityGroups')[copyIndex('nsgLoop')].name]",
                  "location": "[parameters('location')]",
                  "copy": {
                      "name": "nsgLoop",
                      "count": "[length(variables('networkSecurityGroups'))]"
                  },
                  "tags": "[variables('tags')]",
                  "properties": {
                    "copy": [
                        {
                          "name": "securityRules",
                          "count": "[length(variables('networkSecurityGroups')[copyIndex('nsgLoop')].securityRules)]",
                          "input": {
                            "name": "[variables('networkSecurityGroups')[copyIndex('nsgLoop')].securityRules[copyIndex('securityRules')].name]",
                            "properties": {
                              "description": "[variables('networkSecurityGroups')[copyIndex('nsgLoop')].securityRules[copyIndex('securityRules')].description]",
                              "protocol": "[variables('networkSecurityGroups')[copyIndex('nsgLoop')].securityRules[copyIndex('securityRules')].protocol]",
                              "sourcePortRange": "[if(not(equals(variables('networkSecurityGroups')[copyIndex('nsgLoop')].securityRules[copyIndex('securityRules')].sourcePortRange, json('null'))), variables('networkSecurityGroups')[copyIndex('nsgLoop')].securityRules[copyIndex('securityRules')].sourcePortRange, json('null'))]",
                              "sourcePortRanges": "[if(not(equals(variables('networkSecurityGroups')[copyIndex('nsgLoop')].securityRules[copyIndex('securityRules')].sourcePortRanges, json('null'))), variables('networkSecurityGroups')[copyIndex('nsgLoop')].securityRules[copyIndex('securityRules')].sourcePortRanges, json('null'))]",
                              "destinationPortRange": "[if(not(equals(variables('networkSecurityGroups')[copyIndex('nsgLoop')].securityRules[copyIndex('securityRules')].destinationPortRange, json('null'))), variables('networkSecurityGroups')[copyIndex('nsgLoop')].securityRules[copyIndex('securityRules')].destinationPortRange, json('null'))]",
                              "destinationPortRanges": "[if(not(equals(variables('networkSecurityGroups')[copyIndex('nsgLoop')].securityRules[copyIndex('securityRules')].destinationPortRanges, json('null'))), variables('networkSecurityGroups')[copyIndex('nsgLoop')].securityRules[copyIndex('securityRules')].destinationPortRanges, json('null'))]",
                              "sourceAddressPrefix": "[if(not(equals(variables('networkSecurityGroups')[copyIndex('nsgLoop')].securityRules[copyIndex('securityRules')].sourceAddressPrefix, json('null'))), variables('networkSecurityGroups')[copyIndex('nsgLoop')].securityRules[copyIndex('securityRules')].sourceAddressPrefix, json('null'))]",
                              "sourceAddressPrefixes": "[if(not(equals(variables('networkSecurityGroups')[copyIndex('nsgLoop')].securityRules[copyIndex('securityRules')].sourceAddressPrefixes, json('null'))), variables('networkSecurityGroups')[copyIndex('nsgLoop')].securityRules[copyIndex('securityRules')].sourceAddressPrefixes, json('null'))]",
                              "destinationAddressPrefix": "[if(not(equals(variables('networkSecurityGroups')[copyIndex('nsgLoop')].securityRules[copyIndex('securityRules')].destinationAddressPrefix, json('null'))), variables('networkSecurityGroups')[copyIndex('nsgLoop')].securityRules[copyIndex('securityRules')].destinationAddressPrefix, json('null'))]",
                              "destinationAddressPrefixes": "[if(not(equals(variables('networkSecurityGroups')[copyIndex('nsgLoop')].securityRules[copyIndex('securityRules')].destinationAddressPrefixes, json('null'))), variables('networkSecurityGroups')[copyIndex('nsgLoop')].securityRules[copyIndex('securityRules')].destinationAddressPrefixes, json('null'))]",                                
                              "access": "[variables('networkSecurityGroups')[copyIndex('nsgLoop')].securityRules[copyIndex('securityRules')].access]",
                              "priority": "[variables('networkSecurityGroups')[copyIndex('nsgLoop')].securityRules[copyIndex('securityRules')].priority]",
                              "direction": "[variables('networkSecurityGroups')[copyIndex('nsgLoop')].securityRules[copyIndex('securityRules')].direction]"
                            }
                          }
                        }
                    ]              
                  }                
                }
            ]    
}
